--- a/index.html
+++ b/index.html
@@ -85,76 +85,6 @@
             </div>
         </div>
     </section>
-   <!--
-    <section class="about" id="about">
-        <div class="about-img">
-            <img src="img/aboutMe.png" alt="" class="aboutHero">
-            <div class="showcase-ring">
-                <img src="shapes/ring.png" class="ring">
-                <img src="shapes/circle.png" class="circle">
-            </div>
-        </div>
-        <div class="about-content">
-            <h2 class="heading">About Me</h2>
-            <h3>3 Year's Experience on Product Design</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint voluptatem autem ex in. Temporibus et maiores ipsum recusandae voluptas consequatur!</p>
-            <div class="about-btn">
-                <button class="active">Main Skills</button>
-                <button>Awards</button>
-                <button>Education</button>
-            </div>
-            <div class="content-btn">
-                <div class="content">
-                    <div class="text-box">
-                    <p>User Experience Design - UI / UX</p>
-                    <span>Delight the user and make it work.</span>
-                </div>
-                <div class="text-box">
-                    <p>Web & User Interface Design - Development</p>
-                    <span>Website , Web Experience , ...</span>
-                </div>
-                <div class="text-box">
-                    <p>Interaction Desing - Animation</p>
-                    <span>I Like to move it move it</span>
-                </div>
-                </div>
-
-                <div class="content">
-                    <div class="text-box">
-                    <p>Web Design Award</p>
-                    <span>Award for creativity and user experience.</span>
-                </div>
-                <div class="text-box">
-                    <p>Code and Development Award</p>
-                    <span>Exceptional coding skills and develoment techniques</span>
-                </div>
-                <div class="text-box">
-                    <p>Hackathons and coding Competiotions</p>
-                    <span>Participating in hackathons and coding.</span>
-                </div>
-                </div>
-
-
-                <div class="content">
-                    <div class="text-box">
-                    <p>Online Courses and Bootcamps</p>
-                    <span>Delight the user and make it work.</span>
-                </div>
-                <div class="text-box">
-                    <p>Internships and Work Experience</p>
-                    <span>Website , Web Experience , ...</span>
-                </div>
-                <div class="text-box">
-                    <p>Bachelor's Degree in Computer Science</p>
-                    <span>I Like to move it move it</span>
-                </div>
-                </div>
-            </div>
-            <div class="cvContent">
-                <a href="./Qoriev_Manuchehr_Resume.pdf" target="_blank" class="btn d-CV">Download CV <i class='bx bx-download'></i></a>
-            </div>
-        </div>
-    </section> -->
 
     <section class="about" id="about">
         <div class="about-img">
@@ -217,8 +147,8 @@
 
     <section class="portfolio" id="portfolio">
         <div class="main-text">
-            <h2 class="heading">My Services</h2>
-            <span>what I will do for you</span>
+            <h2 class="heading">My Portfolio</h2>
+            <span>projects that I have completed</span>
         </div>
         <div class="fillter-buttons">
             <button class="button mixitup-control-active" data-filter="all">All Work</button>
