--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
         </div>
         <div class="img-hero">
-            <img src="img/hero.png" alt="">
+            <img src="./img/hero.jpg" alt="">
             <div class="rotate-text">
                 <div class="text">
                     <p>I'm Full-stack Developer And I'm Machine Learning Engineer </p>
@@ -86,11 +86,11 @@
         </div>
     </section>
 
+
     <section class="about" id="about">
         <div class="about-img">
-            <img src="img/aboutMe.png" alt="" class="aboutHero">
+            <img src="./img/aboutMe.jpg" alt="" class="aboutHero">
             <div class="showcase-ring">
-                <img src="shapes/ring.png" class="ring">
                 <img src="shapes/circle.png" class="circle">
             </div>
         </div>
