--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
             <div class="menu-icon">
                 <div class="bar"></div>
             </div>
+            <!-- <div class="switcher">
+                <label for="theme-switch">Dark Mode</label>
+                <input type="checkbox" id="theme-switch">
+            </div>          -->
         </div>
     </header>
 
@@ -45,7 +49,7 @@
 
             <div class="btn-box">
                 <a href="mailto:manucheherqoriev798@gmail.com" class="btn">Hire Me Now ! <i class='bx bx-right-arrow-alt' ></i></a>
-                <a href="./Qoriev_Manuchehr_Resume.pdf" target="_blank" class="btn d-CV">Download CV <i class='bx bx-download'></i></a>
+                <a href="./Qoriev_Manuchehr_CV.pdf" target="_blank" class="btn d-CV">Download CV <i class='bx bx-download'></i></a>
             </div>
 
             <div class="social-media">
@@ -134,7 +138,7 @@
                 </div>
             </div>
             <div class="cvContent">
-                <a href="./Your_Name_Resume.pdf" target="_blank" class="btn d-CV">Download CV <i class='bx bx-download'></i></a>
+                <a href="./Qoriev_Manuchehr_CV.pdf" target="_blank" class="btn d-CV">Download CV <i class='bx bx-download'></i></a>
             </div>
         </div>
     </section>
