--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                                                 <circle cx="85" cy="85" r="75" stroke-linecap="round" />
                                        </svg>
                                        <h2 class="counter">
-                                        <span data-target="40">0</span>%
+                                        <span data-target="60">0</span>%
                                        </h2>
                                     </div>
                                 </div>
@@ -377,7 +377,7 @@
     </section>
 
     <footer>
-        <p>Copyright © 2023 by <span>Qoriev Manuchehr</span> || All Right Reservd.</p>
+        <p>Copyright © 2023 by <span>Qoriev Manuchehr</span> || All Right Reserved.</p>
         
         <div class="social-media footer-social-media">
             
