--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
     </section>
 
     <footer>
-        <p>Copyright © 2023 by <span>Qoriev Manuchehr</span> || All Right Reserved.</p>
+        <p>Copyright © 2023 by <span>Qoriev Manuchehr and Bi Boo Sand</span> || All Right Reserved.</p>
         
         <div class="social-media footer-social-media">
             
