--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             <div class="btn-box">
                 <a href="mailto:manucheherqoriev798@gmail.com" class="btn">Hire Me Now ! <i class='bx bx-right-arrow-alt' ></i></a>
-                <a href="./Qoriev_Manuchehr_CV.pdf" target="_blank" class="btn d-CV">Download CV <i class='bx bx-download'></i></a>
+                <a href="./Qoriev Manuchehr CV__Кориев Манучехр Резюме.pdf" target="_blank" class="btn d-CV">Download CV <i class='bx bx-download'></i></a>
             </div>
 
             <div class="social-media">
@@ -138,7 +138,7 @@
                 </div>
             </div>
             <div class="cvContent">
-                <a href="./Qoriev_Manuchehr_CV.pdf" target="_blank" class="btn d-CV">Download CV <i class='bx bx-download'></i></a>
+                <a href="./Qoriev Manuchehr CV__Кориев Манучехр Резюме.pdf" target="_blank" class="btn d-CV">Download CV <i class='bx bx-download'></i></a>
             </div>
         </div>
     </section>
