--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                                                 <circle cx="85" cy="85" r="75" stroke-linecap="round" />
                                        </svg>
                                        <h2 class="counter">
-                                        <span data-target="60">0</span>%
+                                        <span data-target="70">0</span>%
                                        </h2>
                                     </div>
                                 </div>
@@ -369,6 +369,29 @@
                                     Python
                                 </div>
                             </div>
+
+                            <div class="skill">
+                                <div class="outer-circle">
+                                    <div class="inner-circle">
+                                        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="180px" height="180px">
+                                            <defs>
+                                                <linearGradient id="GradientColor">
+                                                <stop offset="0%" stop-color="#e91e63" />
+                                                <stop offset="100%" stop-color="#673ab7" />
+                                                </linearGradient>
+                                            </defs>
+                                                <circle cx="85" cy="85" r="75" stroke-linecap="round" />
+                                       </svg>
+                                       <h2 class="counter">
+                                        <span data-target="40">0</span>%
+                                       </h2>
+                                    </div>
+                                </div>
+                                <div class="sk-title">
+                                    Java
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
