--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <img src="./img/hero.jpg" alt="">
             <div class="rotate-text">
                 <div class="text">
-                    <p>I'm Full-stack Developer And I'm Machine Learning Engineer </p>
+                    <p>I'm Full-stack Developer And Machine Learning Engineer. </p>
                 </div>
                 <span><i></i></span>
             </div>
