--- a/index.html
+++ b/index.html
@@ -462,5 +462,17 @@
     <!-- mixitup cdn js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/3.3.1/mixitup.min.js"></script>
     <script src="script.js"></script>
+    <script>
+        window.embeddedChatbotConfig = {
+        chatbotId: "TitLqRUiY7VKz-XeBsLLa",
+        domain: "www.chatbase.co"
+        }
+        </script>
+        <script
+        src="https://www.chatbase.co/embed.min.js"
+        chatbotId="TitLqRUiY7VKz-XeBsLLa"
+        domain="www.chatbase.co"
+        defer>
+    </script>
 </body>
 </html>
