--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
     <!-- Chatbot container with name above the icon -->
     <div class="chatbot-container">
         <!-- Chatbot name -->
-        <div class="chatbot-name">My Chatbot</div>
+        <div class="chatbot-name">ManuBot</div>
         
         <!-- Chatbot script -->
         <script>
