--- a/index.html
+++ b/index.html
@@ -468,18 +468,7 @@
         <div class="chatbot-name">ManuBot</div>
         
         <!-- Chatbot script -->
-        <script>
-            window.embeddedChatbotConfig = {
-                chatbotId: "TitLqRUiY7VKz-XeBsLLa",
-                domain: "www.chatbase.co"
-            }
-        </script>
-        <script
-            src="https://www.chatbase.co/embed.min.js"
-            chatbotId="TitLqRUiY7VKz-XeBsLLa"
-            domain="www.chatbase.co"
-            defer>
-        </script>
+        <script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js" defer>67012e79b561b00b97c6a2ab,67012e60c51574211203dfb3</script>
     </div>
 </body>
 </html>
