--- a/index.html
+++ b/index.html
@@ -468,7 +468,8 @@
         <div class="chatbot-name">ManuBot</div>
         
         <!-- Chatbot script -->
-        <script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js" defer>67012e79b561b00b97c6a2ab,67012e60c51574211203dfb3</script>
+        <iframe src="https://page.botpenguin.com/67012e79b561b00b97c6a2ab/67012e60c51574211203dfb3"></iframe>
+        <!-- <script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js" defer>67012e79b561b00b97c6a2ab,67012e60c51574211203dfb3</script> -->
     </div>
 </body>
 </html>
