--- a/index.html
+++ b/index.html
@@ -469,8 +469,8 @@
         
         <!-- Chatbot script -->
         <!-- <iframe src="https://page.botpenguin.com/67012e79b561b00b97c6a2ab/67012e60c51574211203dfb3"></iframe> -->
-        <script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js" defer>67014c21bc955a0b8b9a85d5,67012e60c51574211203dfb3</script>
-
+        <script> window.chtlConfig = { chatbotId: "9374553154" } </script>
+        <script async data-id="9374553154" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
     </div>
 </body>
 </html>
