added new chatbot

--- a/index.html
+++ b/index.html
@@ -468,9 +468,9 @@
         <div class="chatbot-name">ManuBot</div>
         
         <!-- Chatbot script -->
-        <!-- <iframe src="https://page.botpenguin.com/67012e79b561b00b97c6a2ab/67012e60c51574211203dfb3"></iframe> -->
-        <script> window.chtlConfig = { chatbotId: "9374553154" } </script>
         <script async data-id="9374553154" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
+        <script> window.chtlConfig = { chatbotId: "5173866763" } </script>
+        <script async data-id="5173866763" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
     </div>
 </body>
 </html>
