--- a/index.html
+++ b/index.html
@@ -468,9 +468,7 @@
         <div class="chatbot-name">ManuBot</div>
         
         <!-- Chatbot script -->
-        <script async data-id="9374553154" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
-        <script> window.chtlConfig = { chatbotId: "5173866763" } </script>
-        <script async data-id="5173866763" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
+        <script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js" defer>6701574fb561b00b97c6a3e4,67015731c5157421120458f5</script>
     </div>
 </body>
 </html>
