--- a/index.html
+++ b/index.html
@@ -468,7 +468,8 @@
         <div class="chatbot-name">ManuBot</div>
         
         <!-- Chatbot script -->
-        <script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js" defer>6701574fb561b00b97c6a3e4,67015731c5157421120458f5</script>
+        <!-- <script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js" defer>6701574fb561b00b97c6a3e4,67015731c5157421120458f5</script> -->
+        <script src="https://cdn.pulse.is/livechat/loader.js" data-live-chat-id="67015ccb0e98d39718029afc" async></script>
     </div>
 </body>
 </html>
