--- a/index.html
+++ b/index.html
@@ -469,7 +469,26 @@
         
         <!-- Chatbot script -->
         <!-- <script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js" defer>6701574fb561b00b97c6a3e4,67015731c5157421120458f5</script> -->
-        <script src="https://cdn.pulse.is/livechat/loader.js" data-live-chat-id="67015ccb0e98d39718029afc" async></script>
+        <!-- <script src="https://cdn.pulse.is/livechat/loader.js" data-live-chat-id="67015ccb0e98d39718029afc" async></script> -->
+        <script>
+            (function (w, d, s, o, f, js, fjs) {
+              w["botsonic_widget"] = o;
+              w[o] =
+                w[o] ||
+                function () {
+                  (w[o].q = w[o].q || []).push(arguments);
+                };
+              (js = d.createElement(s)), (fjs = d.getElementsByTagName(s)[0]);
+              js.id = o;
+              js.src = f;
+              js.async = 1;
+              fjs.parentNode.insertBefore(js, fjs);
+            })(window, document, "script", "Botsonic", "https://widget.botsonic.com/CDN/botsonic.min.js");
+            Botsonic("init", {
+              serviceBaseUrl: "https://api-azure.botsonic.ai",
+              token: "4e6dcf5e-744e-4a0f-87a4-e313c607735a",
+            });
+        </script>
     </div>
 </body>
 </html>
