--- a/index.html
+++ b/index.html
@@ -468,21 +468,9 @@
         <div class="chatbot-name">ManuBot</div>
         
         <!-- Chatbot script -->
-        <!-- <script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js" defer>6701574fb561b00b97c6a3e4,67015731c5157421120458f5</script> -->
-        <!-- <script src="https://cdn.pulse.is/livechat/loader.js" data-live-chat-id="67015ccb0e98d39718029afc" async></script> -->
-        <script type="text/javascript">
-            (function(d, t) {
-                var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
-                v.onload = function() {
-                  window.voiceflow.chat.load({
-                    verify: { projectID: '67012836572c298c66c6c3bf' },
-                    url: 'https://general-runtime.voiceflow.com',
-                    versionID: 'production'
-                  });
-                }
-                v.src = "https://cdn.voiceflow.com/widget/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
-            })(document, 'script');
-          </script>
+        <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
+        <script src="https://files.bpcontent.cloud/2024/10/05/16/20241005163327-YX4G0H1P.js"></script>
+            
     </div>
 </body>
 </html>
